[package]
name = "skin-detection-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
axum = "0.2.5"
serde = "1.0.130"
serde_json = "1.0"
lazy_static = "1.4.0"
num_enum = "0.5.4"
