[package]
name = "skin-detection-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
axum = "0.2.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.6"
lazy_static = "1.4.0"
num_enum = "0.5.4"
log = "0.4.14"
log4rs = "1.0.0"
tracing = "0.1"
tracing-subscriber = "0.2"
